--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 
     <!-- CSS Files -->
-    <link rel="stylesheet" href="/public/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/public/css/plugins.min.css" />
-    <link rel="stylesheet" href="/public/css/kaiadmin.min.css" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/plugins.min.css" />
+    <link rel="stylesheet" href="/css/kaiadmin.min.css" />
 
-    <link rel="stylesheet" href="/public/css/demo.css" />
+    <link rel="stylesheet" href="/css/demo.css" />
 
 </head>
 
